更新作業五註解
更新作業五註解

--- a/homework/Day005_draw_HW.ipynb
+++ b/homework/Day005_draw_HW.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
     "maskimage=np.zeros(np.shape(img_hw),dtype=np.uint8)\n",
     "#再把要顯示的區塊像素設為255\n",
     "maskimage[scale_point1[1]:scale_point2[1],scale_point1[0]:scale_point2[0]]=255\n",
-    "#把原本的圖片與遮罩圖片做邏輯運算(ADD) 則只顯示遮罩的區塊\n",
+    "#把原本的圖片與遮罩圖片做邏輯運算(AND) 則只顯示遮罩的區塊\n",
     "imagetest =cv2.bitwise_and(img_hw,maskimage)\n",
     "while True:\n",
     "    cv2.imshow('image', imagetest)\n",
@@ -355,6 +355,13 @@
     "        cv2.destroyAllWindows()\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
