作業十一註解修正
作業十一註解修正

--- a/homework/Day011_CNN-______HW.ipynb
+++ b/homework/Day011_CNN-______HW.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_5 (Conv2D)            (None, 26, 26, 32)        320       \n",
+      "conv2d_6 (Conv2D)            (None, 26, 26, 32)        320       \n",
       "=================================================================\n",
       "Total params: 320\n",
       "Trainable params: 320\n",
@@ -117,7 +117,7 @@
        "'理解輸出Total params為何==320'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,13 +133,13 @@
     "##看看model結構\n",
     "print(model.summary())\n",
     "'''理解輸出Total params為何==320'''\n",
-    "'((kernel_size)*stride+1)*filters)\n",
-    "'(3*3*1+1)*32 = 320"
+    "#((kernel_size)*stride+1)*filters)\n",
+    "#(3*3*1+1)*32 = 320"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -149,9 +149,9 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "input_1 (InputLayer)         (None, 784)               0         \n",
+      "input_2 (InputLayer)         (None, 784)               0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 288)               226080    \n",
+      "dense_2 (Dense)              (None, 288)               226080    \n",
       "=================================================================\n",
       "Total params: 226,080\n",
       "Trainable params: 226,080\n",
@@ -166,7 +166,7 @@
        "'理解輸出Total params為何==226080'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
     "##看看model結構\n",
     "print(model.summary())\n",
     "'''理解輸出Total params為何==226080'''\n",
-    "'288*784+288=226080"
+    "#288*784+288=226080"
    ]
   },
   {
